[tool.poetry]
name = "youtubelivealert"
version = "0.1.0"
description = "Track channels and autoplay live streams when one starts."
authors = ["IDex <idex@bobmail.info>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"
selenium = "^3.141"
munch = "^2.5"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
yapf = "^0.29.0"
jedi = "^0.16.0"
flake8 = "^3.7"
autoflake = "^1.3"

[tool.poetry.scripts]
vtube= 'youtubelivealert:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

